# tauri-anime-rss

./: package.json
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/assets/: database_dev.db  sample_mikan.rss
src-tauri/migrations/2023-04-30-085729_create_table/: down.sql  up.sql
src-tauri/src/: main.rs  schema.rs
src-tauri/src/model/: mod.rs
src-tauri/src/service/: channel_service.rs  feed_service.rs  mod.rs  rss_service.rs
